--- a/styles/check-point.module.css
+++ b/styles/check-point.module.css
@@ -44,6 +44,13 @@
     padding-bottom: 0;
 }
 
+.container .box .section .codeInput{
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    margin-top: 4px;
+}
+
 .container .box .section .code{
     -webkit-appearance: none;
     border: 1px solid #ccd0d5;
@@ -51,6 +58,8 @@
     margin: 0;
     padding: 3px;
     width: 140px;
+    min-width: 140px;
+    margin-right: 10px;
 }
 
 .container .box .bottom{
